# capi

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
cmake/: Coverage.cmake
include/capi/: flag.hpp  unique_flgd.hpp  unique_id.hpp  unique_res.hpp  unique_sys.hpp
include/expect/: expect.hpp
include/single/: capi  expect
